--- a/readthedocs.yaml
+++ b/readthedocs.yaml
@@ -1,7 +1,10 @@
 version: 2
 
 build:
+  os: ubuntu-22.04 
+  tools:
+    python: "3.9"   
   image: latest
 
 sphinx:
-  configuration: docs/source/conf.py
+  configuration: docs/source/conf.py 
